--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
        </head>
 
        <body>
-       <p><a href="https://github.com/eddieatjollyroger/cv">An experiment by Joao Pacheco</a></p>
+       <p><a href="https://eddieatjollyroger.github.io/cv">An experiment by Joao Pacheco</a></p>
               <div align="center" id="embed-html"></div>
               <script type="text/javascript" src="html/html.nocache.js"></script>
        </body>
