--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
               <title>BelicaAssassina</title>
               <meta http-equiv="content-type" content="text/html; charset=UTF-8">
               <meta id="gameViewport" name="viewport" content="width=device-width initial-scale=1">
+              <meta property="og:image" content="http://joaopacheco.me/images/1.png"/>
+              <meta property="og:image:type" content="image/png"/>
+              <meta property="og:image:width" content="2394"/>
+              <meta property="og:image:height" content="1496"/>
               <link href="styles.css" rel="stylesheet" type="text/css">
 
        </head>
